# Mail

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  menu.rs  version.rs  window.rs
src-tauri/src/authentication/: domain.rs  mod.rs  tls.rs  token.rs
src-tauri/src/authentication/accounts/: linux.rs  local.rs  mod.rs
src-tauri/src/client/: commands.rs  json.rs  mod.rs
src-tauri/src/error/: mod.rs
src-tauri/src/mail/: inbox.rs  mod.rs
src-tauri/src/settings/: init.rs  mod.rs
src/components/Icons/: ArchiveIcon.vue  ChevronDownIcon.vue  ChevronRightIcon.vue  FileIcon.vue  FilterIcon.vue  FlagIcon.vue  FolderIcon.vue  InboxIcon.vue  MailIcon.vue  PaperClipIcon.vue  README.md  ScissorIcon.vue  SearchIcon.vue  SendIcon.vue  StarIcon.vue  TagIcon.vue  TrashIcon.vue
src/components/Multipane/: Multipane.vue
src/components/Panels/: Account.vue  Email.vue  Letter.vue
src/components/menu/: AppMenu.vue  EditMenu.vue  FileMenu.vue  Menu.vue  ProfileMenu.vue  ViewMenu.vue
src/router/: index.ts
src/types/: mail.ts  package.ts
src/views/: About.vue  Home.vue
