[package]
name = "mail"
version = "0.1.0"
description = "Mail Client for logging into mail sessions."
authors = ["Joseph Meyer"]
default-run = "mail"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.4", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.6", features = [] }
tauri-plugin-shell = "2.0.0-beta.1"
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.195", features = ["derive"] }
toml = "0.8.8"
imap = "2.4.1"
native-tls = "0.2.11"
gnome-online-accounts-rs = "0.0.1"
mail-parser = "0.9.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
